[package]
name = "dartbot"
version = "0.1.0"
authors = ["muvlon"]
edition = "2018"

[dependencies]
tbot = "0.6.4"
tokio = { version = "0.2.21", features = ["rt-threaded", "macros"] }
tracing = { version = "0.1.15", features = ["release_max_level_info"] }
tracing-subscriber = "0.2.6"
anyhow = "1.0.31"
rand = "0.7.3"
